--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,8 @@
     max-width: 1200px;
     height: 100vh;
     margin: 0 auto;
-
+    background-color: rgb(50, 38, 188);
+    padding: 2em;
     display: grid;
     grid-template-columns: 1fr 453px;
     column-gap: 120px;
