--- a/src/components/MessageList/styles.module.scss
+++ b/src/components/MessageList/styles.module.scss
@@ -1,6 +1,7 @@
 .messageListWrapper {
     display: flex;
     flex-direction: column;
+    color: #ffffff;
 
     justify-content: space-between;
     align-items: flex-start;
